# term-game

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  Doxyfile  banner.py  macros.txt  main.c  start.c  start.h  todo.md
assets/dialogue/: freaky.txt  gudruns_mission.txt  intro.txt  meeting_gudrun.txt  opening.txt  test.txt  test2.txt  well.txt
cmake-cfg/: build-path.h  build-path.h.in
dialogue/: intro_placeholder.txt
documentation/html/: index.html
documentation/latex/: refman.tex
source/: CMakeLists.txt  main.c
source/application/: CMakeLists.txt  dependencies.cmake  menu_constants.c  menu_constants.h  start.c  start.h  state.c  state.h
source/cmake-cfg/: build-path.h.in
source/utils/: CMakeLists.txt  base.c  base.h  dependencies.cmake  menu.c  menu.h  state.c  state.h  vec.c  vec.h
source/utils/games/: sudoku.c  sudoku.h  witness.c  witness.h
source/utils/io/: logging.c  logging.h  utf8.c  utf8.h
source/utils/menu/: menu.c  menu.h  menu_constants.c  menu_constants.h  start.c  start.h
tests/: CMakeLists.txt  sudoku_test.c  vec_test.c  witness_test.c
tools/: analyze  banner.py
utils/: color.h  gettext_defs.h  logging.h  menu.c  menu.h  menu_constants.c  menu_constants.h  state.c  state.h  text.c  text.h  utf8.c  utf8.h  utils.c  utils.h  vec.c  vec.h  witness.c  witness.h
